# eve-remap

./: .gitignore  CODE_REVIEW.md  Cargo.toml  PLAN.md  README.md  test_queue.txt  test_queue2.txt  test_queue_long.txt
.omp/: AGENTS.md
assets/: implants.json  skills.json
docs/: esi-research.md
src/: auth.rs  calculator.rs  cli.rs  esi.rs  main.rs  optimizer.rs  parser.rs
src/auth/: mod.rs  sso.rs
src/data/: esi.rs  mod.rs  models.rs  sde.rs
