[package]
name = "eve-remap"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
base64 = "0.22"
rand = { version = "0.8", features = ["std_rng"] }
sha2 = "0.10"
urlencoding = "2.1.3"
eve_esi = "0.4"
[dev-dependencies]
tempfile = "3"
