[package]
name = "eve-remap"
version = "0.1.0"
edition = "2021"

[dependencies]
rfesi = { version = "0.50", default-features = false, features = ["random_state", "validate_jwt", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
[dev-dependencies]
tempfile = "3"
